simplify facility state, logistics and starmap architecture (#384)