@@ -5,7 +5,8 @@ import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
+import java.util.Set;
+import java.util.UUID;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -14,6 +15,7 @@ import com.gtnewhorizons.galaxia.registry.celestial.CelestialAsset;
 import com.gtnewhorizons.galaxia.registry.celestial.CelestialAssetStore;
 import com.gtnewhorizons.galaxia.registry.celestial.CelestialObjectKey;
 import com.gtnewhorizons.galaxia.registry.celestial.station.Station;
+import com.gtnewhorizons.galaxia.registry.interfaces.IDistributedInventory;
 import com.gtnewhorizons.galaxia.registry.outpost.AutomatedFacility;
 import com.gtnewhorizons.galaxia.registry.outpost.InventoryKey;
 import com.gtnewhorizons.galaxia.registry.outpost.ItemStackWrapper;
@@ -26,184 +28,189 @@ public final class LogisticStore {
     private static final Logger LOG = LogManager.getLogger("Galaxia");
 
     private static final List<LogisticsDelivery> activeDeliveries = new ArrayList<>();
-    private static final Map<CelestialAsset.ID, Map<ItemStackWrapper, LogisticSignal>> outpostSignals = new LinkedHashMap<>();
+    private static final List<LogisticsDelivery> deliveryView = Collections.unmodifiableList(activeDeliveries);
+    private static final Map<CelestialAsset.ID, Map<ItemStackWrapper, InboundAmounts>> inbound = new LinkedHashMap<>();
 
     private LogisticStore() {}
 
     public static List<LogisticsDelivery> activeDeliveries() {
-        return activeDeliveries;
+        return deliveryView;
     }
 
     public static void addDelivery(LogisticsDelivery delivery) {
         activeDeliveries.add(delivery);
+        adjustInbound(delivery, delivery.data.amount(), delivery.isArrived() ? delivery.data.amount() : 0L);
     }
 
     public static void clearDeliveries() {
         activeDeliveries.clear();
+        inbound.clear();
     }
 
-    public static void clearSignals() {
-        outpostSignals.clear();
+    /** Pending cargo includes arrived cargo still waiting for inventory space. */
+    public record InboundAmounts(long allPending, long arrived) {
+
+        private static final InboundAmounts EMPTY = new InboundAmounts(0L, 0L);
     }
 
-    public static void removeSignalsFor(CelestialAsset.ID assetId) {
-        if (assetId != null) outpostSignals.remove(assetId);
+    public static InboundAmounts inboundAmounts(CelestialAsset.ID toAssetId, ItemStackWrapper resource) {
+        return inbound.getOrDefault(toAssetId, Map.of())
+            .getOrDefault(resource, InboundAmounts.EMPTY);
     }
 
-    public static long inboundInTransitAmount(CelestialAsset.ID toAssetId, ItemStackWrapper resource) {
-        long total = 0L;
-        for (LogisticsDelivery task : activeDeliveries) {
-            if (!toAssetId.equals(task.data.toAssetId())) continue;
-            if (!resource.equals(task.data.resourceId())) continue;
-            total += task.data.amount();
+    private static void adjustInbound(LogisticsDelivery delivery, long pendingDelta, long arrivedDelta) {
+        if (pendingDelta == 0L && arrivedDelta == 0L) return;
+        CelestialAsset.ID destination = delivery.data.toAssetId();
+        ItemStackWrapper resource = delivery.data.resourceId();
+        Map<ItemStackWrapper, InboundAmounts> resources = inbound
+            .computeIfAbsent(destination, ignored -> new LinkedHashMap<>());
+        InboundAmounts previous = resources.getOrDefault(resource, InboundAmounts.EMPTY);
+        InboundAmounts next = new InboundAmounts(
+            previous.allPending() + pendingDelta,
+            previous.arrived() + arrivedDelta);
+        if (next.allPending() == 0L && next.arrived() == 0L) {
+            resources.remove(resource);
+            if (resources.isEmpty()) inbound.remove(destination);
+        } else {
+            resources.put(resource, next);
         }
-        return total;
     }
 
-    public static long arrivedInboundAmount(CelestialAsset.ID toAssetId, ItemStackWrapper resource) {
-        long total = 0L;
-        for (LogisticsDelivery task : activeDeliveries) {
-            if (!toAssetId.equals(task.data.toAssetId())) continue;
-            if (!resource.equals(task.data.resourceId())) continue;
-            if (!task.isArrived()) continue;
-            total += task.data.amount();
-        }
-        return total;
+    private static void removeDelivery(int index, LogisticsDelivery delivery) {
+        adjustInbound(delivery, -delivery.data.amount(), delivery.isArrived() ? -delivery.data.amount() : 0L);
+        activeDeliveries.remove(index);
     }
 
     public static void tickDeliveries() {
         for (int i = activeDeliveries.size() - 1; i >= 0; i--) {
             LogisticsDelivery current = activeDeliveries.get(i);
-            if (CelestialAssetStore.findAsset(current.data.fromAssetId()) == null
-                || CelestialAssetStore.findAsset(current.data.toAssetId()) == null) {
-                activeDeliveries.remove(i);
-                continue;
-            }
+            boolean wasArrived = current.isArrived();
             LogisticsDelivery ticked = current.tick();
-            if (ticked.isArrived()) {
-                CelestialAsset destination = CelestialAssetStore.findAsset(ticked.data.toAssetId());
-                if (destination == null) {
-                    activeDeliveries.remove(i);
-                    LOG.warn(
-                        "[Logistics] Task {} arrived but destination outpost {} not found; resources lost.",
-                        ticked.deliveryId,
-                        ticked.data.toAssetId());
-                    return;
-                }
-                long accepted = destination.updateContents(ticked.data.resourceId(), ticked.data.amount(), true);
-                long remaining = ticked.data.amount() - accepted;
-                if (remaining > 0L) {
-                    ticked.setAmount(remaining);
-                } else {
-                    activeDeliveries.remove(i);
-                }
-                LOG.debug(
-                    "[Logistics] Task {} delivered {} x {} to {}",
-                    ticked.deliveryId,
-                    accepted,
-                    ticked.data.resourceId(),
-                    ticked.data.toAssetId());
+            if (wasArrived != ticked.isArrived()) {
+                adjustInbound(ticked, 0L, ticked.isArrived() ? ticked.data.amount() : -ticked.data.amount());
             }
+            if (!ticked.isArrived()) continue;
+            CelestialAsset destination = CelestialAssetStore.findAsset(ticked.data.toAssetId());
+            if (canReceiveCargo(destination)) deliverOrRetain(i, ticked, destination);
+            else loseDelivery(i, ticked);
         }
     }
 
-    public static void updateSignalsForFacility(CelestialAsset asset) {
-        CelestialAsset.ID assetId = asset.assetId;
-        Map<ItemStackWrapper, Long> snapshot = asset.aggregatedItems();
-        Map<ItemStackWrapper, Long> cannonItems = null;
-        if (asset instanceof Station station) {
-            cannonItems = station.getCannonChestItems();
+    private static boolean canReceiveCargo(CelestialAsset asset) {
+        return asset instanceof AutomatedFacility || asset instanceof IDistributedInventory;
+    }
+
+    private static void loseDelivery(int index, LogisticsDelivery delivery) {
+        LOG.warn(
+            "[Logistics] Lost delivery {} from {} to {} containing {} x {} because the destination cannot receive cargo",
+            delivery.deliveryId,
+            delivery.data.fromAssetId(),
+            delivery.data.toAssetId(),
+            delivery.data.amount(),
+            delivery.data.resourceId());
+        removeDelivery(index, delivery);
+    }
+
+    private static void deliverOrRetain(int index, LogisticsDelivery delivery, CelestialAsset recipient) {
+        long accepted = insertCargo(recipient, delivery.data.resourceId(), delivery.data.amount());
+        long remaining = delivery.data.amount() - accepted;
+        if (remaining > 0L) {
+            adjustInbound(delivery, -accepted, delivery.isArrived() ? -accepted : 0L);
+            delivery.setAmount(remaining);
+        } else removeDelivery(index, delivery);
+        LOG.debug(
+            "[Logistics] Task {} delivered {} x {} to {}",
+            delivery.deliveryId,
+            accepted,
+            delivery.data.resourceId(),
+            recipient.assetId);
+    }
+
+    private static long insertCargo(CelestialAsset recipient, ItemStackWrapper resource, long amount) {
+        if (recipient instanceof AutomatedFacility facility) return facility.insert(resource, amount);
+        if (recipient instanceof IDistributedInventory physicalInventory) {
+            return physicalInventory.updateContents(resource, amount);
         }
-        AutomatedFacility automatedFacility = asset instanceof AutomatedFacility facility ? facility : null;
+        return 0L;
+    }
 
-        Map<ItemStackWrapper, LogisticSignal> currentSignals = outpostSignals
-            .computeIfAbsent(assetId, k -> new LinkedHashMap<>());
-
-        List<ItemStackWrapper> allResources = new ArrayList<>();
-        for (InventoryKey key : asset.logisticsConfig.snapshot()
-            .keySet()) {
-            if (key instanceof ItemStackWrapper item) {
-                allResources.add(item);
-            }
+    public static List<LogisticSignal> collectSignals(Iterable<? extends CelestialAsset> assets) {
+        List<LogisticSignal> signals = new ArrayList<>();
+        for (CelestialAsset asset : assets) {
+            if (asset instanceof Station station && station.getTileController() == null) continue;
+            collectSignals(asset, signals);
         }
-        for (ItemStackWrapper r : snapshot.keySet()) {
-            if (!allResources.contains(r)) allResources.add(r);
-        }
-        for (ItemStackWrapper r : currentSignals.keySet()) {
-            if (!allResources.contains(r)) allResources.add(r);
-        }
-        CelestialObjectKey bodyKey = asset.celestialObjectKey;
-        CelestialObjectKey systemKey = asset.systemKey;
-        CelestialObjectKey planetaryAnchorBodyKey = asset.planetaryAnchorBodyKey;
+        return List.copyOf(signals);
+    }
 
-        for (ItemStackWrapper resource : allResources) {
-            long stock = snapshot.getOrDefault(resource, 0L);
-            LogisticsResourceConfig cfg = asset.logisticsConfig.get(resource);
-
-            LogisticSignal oldSignal = currentSignals.get(resource);
-
-            long newAmount = 0;
-            LogisticSignal.Scope newScope = LogisticSignal.Scope.SYSTEM;
-            long importTarget = cfg.isImportEnabled() ? cfg.minReserve() : 0L;
-            long supplyReserve = cfg.minReserve();
-            if (automatedFacility != null) {
-                supplyReserve = Math.max(supplyReserve, automatedFacility.effectiveLowerBound(resource));
-                if (cfg.isImportEnabled()) {
-                    importTarget = Math.max(importTarget, automatedFacility.effectiveLowerBound(resource));
-                }
-            }
-
-            if (importTarget > 0L && stock < importTarget) {
-                newAmount = -(importTarget - stock);
-            } else if (cfg.isSupplyEnabled()) {
-                long supplyStock = stock;
-                if (cannonItems != null) {
-                    supplyStock += cannonItems.getOrDefault(resource, 0L);
-                }
-                if (supplyStock > supplyReserve) {
-                    newAmount = supplyStock - supplyReserve;
-                }
-            }
-
-            if (newAmount == 0) {
-                if (oldSignal != null) {
-                    currentSignals.remove(resource);
-                }
-            } else {
-                LogisticSignal newSignal = new LogisticSignal(
-                    assetId,
-                    systemKey,
+    private static void collectSignals(CelestialAsset asset, List<LogisticSignal> signals) {
+        Set<InventoryKey> configuredResources = asset.logisticsConfig.configuredResources();
+        if (configuredResources.isEmpty()) return;
+        Map<ItemStackWrapper, Long> snapshot = asset instanceof IDistributedInventory physicalInventory
+            ? physicalInventory.aggregatedItems()
+            : Map.of();
+        for (InventoryKey key : configuredResources) {
+            if (!(key instanceof ItemStackWrapper resource)) continue;
+            LogisticsResourceConfig config = asset.logisticsConfig.get(resource);
+            long importStock = asset instanceof AutomatedFacility facility ? facility.itemAmount(resource)
+                : snapshot.getOrDefault(resource, 0L);
+            long amount = signalAmount(asset, resource, config, importStock);
+            if (amount == 0L) continue;
+            signals.add(
+                new LogisticSignal(
+                    asset.assetId,
+                    asset.systemKey,
                     resource,
-                    newAmount,
-                    newScope,
-                    bodyKey,
-                    planetaryAnchorBodyKey);
-
-                if (!Objects.equals(oldSignal, newSignal)) {
-                    currentSignals.put(resource, newSignal);
-                }
-            }
+                    amount,
+                    LogisticSignal.Scope.SYSTEM,
+                    asset.celestialObjectKey,
+                    asset.planetaryAnchorBodyKey));
         }
     }
 
-    public static Map<CelestialObjectKey, List<LogisticSignal>> allSignalsForScope(LogisticSignal.Scope scope) {
+    private static long signalAmount(CelestialAsset asset, ItemStackWrapper resource, LogisticsResourceConfig config,
+        long importStock) {
+        long requested = requestedAmount(asset, resource, config, importStock);
+        if (requested > 0L) return -requested;
+        if (!config.isSupplyEnabled()) return 0L;
+        long supply = asset instanceof Station station ? station.getCannonSupplyAmount(resource, config.minReserve())
+            : importStock - reserveFor(asset, resource, config);
+        return Math.max(supply, 0L);
+    }
+
+    static long reserveFor(CelestialAsset asset, ItemStackWrapper resource, LogisticsResourceConfig config) {
+        return asset instanceof AutomatedFacility facility ? Math.addExact(
+            Math.max(config.minReserve(), facility.effectiveLowerBound(resource)),
+            facility.operationMaterialNeed(resource)) : config.minReserve();
+    }
+
+    static long requestedAmount(CelestialAsset asset, ItemStackWrapper resource, LogisticsResourceConfig config,
+        long stock) {
+        if (!config.isImportEnabled()) return 0L;
+        long missing = Math.max(0L, reserveFor(asset, resource, config) - stock);
+        return Math.max(0L, missing - inboundAmounts(asset.assetId, resource).allPending());
+    }
+
+    public static Map<CelestialObjectKey, List<LogisticSignal>> groupSignals(List<LogisticSignal> signals,
+        LogisticSignal.Scope scope) {
         Map<CelestialObjectKey, List<LogisticSignal>> result = new LinkedHashMap<>();
-
-        for (Map<ItemStackWrapper, LogisticSignal> outpostMap : outpostSignals.values()) {
-            for (LogisticSignal signal : outpostMap.values()) {
-                if (signal.scope() == scope) {
-                    CelestialObjectKey scopeKey = scopeKeyFor(signal);
-                    result.computeIfAbsent(scopeKey, k -> new ArrayList<>())
-                        .add(signal);
-                }
-            }
+        for (LogisticSignal signal : signals) {
+            if (signal.scope() != scope) continue;
+            result.computeIfAbsent(scopeKeyFor(signal), ignored -> new ArrayList<>())
+                .add(signal);
         }
-
-        Map<CelestialObjectKey, List<LogisticSignal>> safe = new LinkedHashMap<>(result.size());
-        for (Map.Entry<CelestialObjectKey, List<LogisticSignal>> e : result.entrySet()) {
-            safe.put(e.getKey(), Collections.unmodifiableList(e.getValue()));
+        for (Map.Entry<CelestialObjectKey, List<LogisticSignal>> entry : result.entrySet()) {
+            entry.setValue(List.copyOf(entry.getValue()));
         }
-        return Collections.unmodifiableMap(safe);
+        return Collections.unmodifiableMap(result);
+    }
+
+    public static List<LogisticSignal> signalsOwnedBy(UUID teamId, List<LogisticSignal> signals) {
+        List<LogisticSignal> owned = new ArrayList<>();
+        for (LogisticSignal signal : signals) {
+            if (CelestialAssetStore.isOwnedBy(teamId, signal.outpostAssetId())) owned.add(signal);
+        }
+        return List.copyOf(owned);
     }
 
     private static CelestialObjectKey scopeKeyFor(LogisticSignal signal) {
